added base schemas w index, res, type

--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "render-build":"npm install && npm run build"
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/server": "^4.10.2",
+    "apollo-server-express": "^3.13.0",
+    "appolo": "^7.0.5",
+    "bcrypt": "^5.1.1",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "vite": "^5.2.7"
   }
 }
