--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apollo-server-express": "^3.13.0",
     "bootstrap": "^5.2.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
