--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.9",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
     "apollo-server-express": "^3.13.0",
     "bootstrap": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
